# llimit-model-selection

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.api  README.md  data_analysis.ipynb  main.py  notebook.ipynb  plots.ipynb  pyproject.toml  requirements.txt  training_run_analysis.md
docs/: accuracy_metric.md  api.md  cli.md  data_loading.md  data_split.md  length_prediction.md  models.md  notes.md  optimizers.md  plotting_utils.md  preprocessing_simple_scoring.md  sample_balancing.md  scoring_sensitivity.md  training_diagnostics.md  training_logging.md
saved_models/: bert-first-full-dataset-run-1766858822.pkl  dn-embedding-length-prediction-1777075958.pkl  dn-embedding-length-prediction-1777103748.pkl  dn-embedding-length-prediction-chatbot-arena-1777073798.pkl  dn-embedding-length-prediction-chatbot-arena-1777074115.pkl  dn-embedding-length-prediction-chatbot-arena-1777074362.pkl  dn-embedding-length-prediction-chatbot-arena-1777074962.pkl  dn-embedding-length-prediction-model-first-test-1771627455.pkl  dn-embedding-loss-changes-1773522505.pkl  dn-embedding-with-attention-1767366445.pkl  dn-length-prediction-model-after-feature-changes-log-lengths-1772055313.pkl  gb-length-prediction-1777073160.pkl  gb-length-prediction-chatbot-arena-1777071267.pkl  gb-length-prediction-chatbot-arena-1777071509.pkl  gb-length-prediction-model-after-feature-changes-log-lengths-1772047195.pkl  gb-length-prediction-model-first-test-1771628143.pkl  gradient-boosting-feature-changes-1772575130.pkl  gradient-boosting-model-2-stage-1770495056.pkl  (+38 more)
(+402 files in other folders)
