[project]
name = "llimit-model-selection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=2.19.2",
    "jupyter==1.1.1",
    "matplotlib==3.10.7",
    "numpy==2.3.5",
    "torch==2.9.1",
    "tqdm==4.66.0",
    "wandb==0.23.0",
]
