[project]
name = "llimit-model-selection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitsandbytes>=0.49.0",
    "datasets>=2.19.2",
    "jupyter==1.1.1",
    "matplotlib==3.10.7",
    "networkx==3.4.2",
    "numpy==2.3.5",
    "peft>=0.18.0",
    "pydantic>=2.12.4",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "torch==2.9.1",
    "tqdm==4.66.0",
    "wandb==0.23.0",
    "xgboost==2.1.3",
]
